--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,2 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+
+// $fondo_harry:'';
+
+body{
+    background-image: url('../../public/img/harry.jpg');
+    background-repeat: no-repeat;
+    // background-size: 1920px;
+}
