manejando clases CSS desde controladores

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10827,7 +10827,11 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-body {
+.harry {
   background-image: url(/images/harry.jpg?1f21d2689b836c7c7156763f7ad34ad6);
   background-repeat: no-repeat;
+}
+
+.castillo {
+  background-color: black;
 }
