--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -3,8 +3,11 @@
 
 // $fondo_harry:'';
 
-body{
+.harry{
     background-image: url('../../public/img/harry.jpg');
     background-repeat: no-repeat;
     // background-size: 1920px;
+}
+.castillo{
+    background-color: black;
 }
