--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10828,10 +10828,11 @@ textarea.form-control-lg {
   }
 }
 .harry {
-  background-image: url(/images/harry.jpg?1f21d2689b836c7c7156763f7ad34ad6);
-  background-repeat: no-repeat;
+  background: rgb(95, 92, 93);
+  background: radial-gradient(circle, rgb(0, 0, 0) 0%, rgb(52, 53, 55) 100%);
 }
 
 .castillo {
-  background-color: black;
+  background-image: url(/images/harry.jpg?1f21d2689b836c7c7156763f7ad34ad6);
+  background-repeat: no-repeat;
 }
