--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10896,3 +10896,9 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px; /* roundness of the scroll thumb */
   border: 3px solid rgb(132, 132, 132); /* creates padding around scroll thumb */
 }
+
+.box {
+  background-color: rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(7px);
+          backdrop-filter: blur(7px);
+}
